make-friends-tab

--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -13,4 +13,20 @@
 }
 .nav__link {
   color: #2e363e;
+  position: relative;
+}
+
+.nav__notification {
+  background-color: tomato;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  position: absolute;
+  left: 17px;
+  bottom: 15px;
 }
