--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
